WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288908
Non-unified build fixes, early March edition
https://bugs.webkit.org/show_bug.cgi?id=288908
Summary
Non-unified build fixes, early March edition
Claudio Saavedra
Reported
2025-02-28 23:44:56 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2025-02-28 23:46:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41708
EWS
Comment 2
2025-03-01 02:06:03 PST
Committed
291434@main
(527064d729a1): <
https://commits.webkit.org/291434@main
> Reviewed commits have been landed. Closing PR #41708 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-03-01 02:07:14 PST
<
rdar://problem/145913336
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug