Non-unified build fixes, early March edition https://bugs.webkit.org/show_bug.cgi?id=288908

Unreviewed build fixes.

* Source/WebCore/platform/EventTrackingRegions.cpp:
* Source/WebCore/rendering/style/StyleSelfAlignmentData.cpp:
* Source/WebCore/rendering/style/StyleSelfAlignmentData.h:

Canonical link: https://commits.webkit.org/291434@main